Doom: add mixed-pitch package

--- a/doom/.doom.d/config.org
+++ b/doom/.doom.d/config.org
@@ -159,7 +159,24 @@ Doom highlights the current line by default, but I find this distracting. Adding
   ;;       doom-variable-pitch-font (font-spec :family "sans" :size 13))
 
   (setq doom-font (font-spec :family "Iosevka" :size 20)
-        doom-variable-pitch-font (font-spec :family "Source Sans Pro" :size 20))
+        doom-variable-pitch-font (font-spec :family "Source Sans Pro" :size 22))
+#+end_src
+
+*** Variable-pitch fonts in text-mode buffers
+
+[[https://gitlab.com/jabranham/mixed-pitch][mixed-pitch]] lets you mix fixed- and variable-pitch fonts, which really improves the look of text-based modes like Org and Markdown.
+
+#+begin_src elisp :tangle packages.el
+(package! mixed-pitch)
+#+end_src
+
+Set =mixed-pitch-set-height= to =t= if you want to be able to set the sizes of your fixed- and variable-pitch fonts independently; if =nil=, =doom-variable-pitch-font= inherits its size from =doom-font=.
+
+#+begin_src elisp
+(use-package! mixed-pitch
+  :hook (org-mode . mixed-pitch-mode)
+  :config
+  (setq mixed-pitch-set-height t))
 #+end_src
 
 ** Color Theme
