--- a/doom/.doom.d/config.org
+++ b/doom/.doom.d/config.org
@@ -174,7 +174,7 @@ Set =mixed-pitch-set-height= to =t= if you want to be able to set the sizes of y
 
 #+begin_src elisp
 (use-package! mixed-pitch
-  :hook (org-mode . mixed-pitch-mode)
+  :hook ((gfm-mode markdown-mode org-mode) . mixed-pitch-mode)
   :config
   (setq mixed-pitch-set-height t))
 #+end_src
@@ -396,3 +396,29 @@ Set larger font sizes for headings.
 #+end_src
 
 ** TODO Add the org-appear package
+
+* Languages
+
+** TODO C/C++
+
+** TODO Java
+
+** Markdown
+
+#+begin_src elisp
+(custom-set-faces
+  '(markdown-header-face-1 ((t (:inherit outline-1 :height 1.4))))
+  '(markdown-header-face-2 ((t (:inherit outline-2 :height 1.3))))
+  '(markdown-header-face-3 ((t (:inherit outline-3 :height 1.2))))
+  '(markdown-header-face-4 ((t (:inherit outline-4 :height 1.2))))
+  '(markdown-header-face-5 ((t (:inherit outline-5 :height 1.1))))
+  '(markdown-header-face-6 ((t (:inherit outline-5 :height 1.1))))
+  '(markdown-header-delimiter-face ((t (:inherit markdown-markup-face)))))
+
+(use-package! markdown-mode
+  :config
+  (setq-default markdown-list-indent-width 2
+                markdown-footnote-location 'end
+                markdown-hide-urls t
+                markdown-hide-markup nil))
+#+end_src
